# Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-2

Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/: Environment Variable Set Up to call OpenAI API.docx  README.md  inpute.json  pyproject.toml
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/capstone14/: __init__.py
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/capstone14/data_logging/: functions.py  pipeline_run.py
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/capstone14/data_profiling/: correlation.py  data_profile.py
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/capstone14/db/: db_functions.py
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/capstone14/ui/: add_process_step.py  compare_model_results_dtree.py  data_trans_type.py  display_model_results_dtree.py  main_win.py  modified_main_win_with_addrawdata_showprofile.py  modified_main_win_with_legend.py
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/examples/: dash_app.py  data_diff_generation.py  data_logging.py  data_profile_generation.py
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/examples/datasets/: employees_v2_for_test.csv  netflix_v1_del_not_given.csv
Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning-main-7/server/api/: main.py
