[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kwlee-kevin", email = "keunwoo.lee@gmail.com" }
]
dependencies = [
    "pyqt5>=5.15.11",
    "matplotlib>=3.9.2",
    "networkx>=3.4.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "openai>=1.51.2",
    "pymongo>=4.10.1",
    "dash>=2.18.1",
    "scikit-learn>=1.5.2",
    "pyqtwebengine>=5.15.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
